--- a/index.html
+++ b/index.html
@@ -6,25 +6,82 @@
     </head>
     <body>
         <div class="layout">
-            <label for="" class="button">
-                <input type="button" class="button"><span class="button" id="a1">page 1</span>
-            </label>
-            <label for="" class="button">
-                <input type="button" class="button" ><span class="button" id="a2">100</span>
-            </label>
-            <label for="" class="button">
-                <input type="button" class="button"><span class="button" id="a3">1</span>
-            </label>
-            <label for="" class="button">
-                <input type="button" class="button"><span class="button" id="a4">1</span>
-            </label>
-            <label for="" class="button">
-                <input type="button" class="button"><span class="button" id="a5">1</span>
-            </label>
-            <label for="" class="button">
-                <input type="button" class="button"><span class="button" id="a6">1</span>
-            </label>
-            <div class="body">Item 9</div>
+            <div class="card" onclick="location.href='./contestants/a1.html';">
+                <img src="./contestants/A1.png">
+            </div>
+            <div class="card" onclick="location.href='./contestants/a2.html';">
+                <img src="./contestants/A2.png">
+            </div>
+            <div class="card" onclick="location.href='./contestants/a3.html';">
+                <img src="./contestants/A3.png">
+            </div>
+            <div class="card" onclick="location.href='./contestants/a4.html';">
+                <img src="./contestants/A4.png">
+            </div>
+            <div class="card" onclick="location.href='./contestants/a5.html';">
+                <img src="./contestants/A5.png">
+            </div>
+            <div class="card" onclick="location.href='./contestants/a6.html';">
+                <img src="./contestants/A6.png">
+            </div>
+            <div class="card" onclick="location.href='./contestants/a7.html';">
+                <img src="./contestants/A7.png">
+            </div>
+            <div class="card" onclick="location.href='./contestants/a8.html';">
+                <img src="./contestants/A8.png">
+            </div>
+            <div class="card" onclick="location.href='./contestants/a9.html';">
+                <img src="./contestants/A9.png">
+            </div>
+            <div class="card" onclick="location.href='./contestants/a10.html';">
+                <img src="./contestants/A10.png">
+            </div>
+            <div class="card" onclick="location.href='./contestants/a11.html';">
+                <img src="./contestants/A11.png">
+            </div>
+            <div class="card" onclick="location.href='./contestants/a12.html';">
+                <img src="./contestants/A12.png">
+            </div>
+            <div class="card" onclick="location.href='./contestants/a13.html';">
+                <img src="./contestants/A13.png">
+            </div>
+            <div class="card" onclick="location.href='./contestants/a14.html';">
+                <img src="./contestants/A14.png">
+            </div>
+            <div class="card" onclick="location.href='./contestants/a15.html';">
+                <img src="./contestants/A15.png">
+            </div>
+            <div class="card" onclick="location.href='./contestants/a16.html';">
+                <img src="./contestants/A16.png">
+            </div>
+            <div class="card" onclick="location.href='./contestants/a17.html';">
+                <img src="./contestants/A17.png">
+            </div>
+            <div class="card" onclick="location.href='./contestants/a18.html';">
+                <img src="./contestants/A18.png">
+            </div>
+            <div class="card" onclick="location.href='./contestants/a19.html';">
+                <img src="./contestants/A19.png">
+            </div>
+            <div class="card" onclick="location.href='./contestants/a20.html';">
+                <img src="./contestants/A20.png">
+            </div>
+            <div class="card" onclick="location.href='./contestants/a21.html';">
+                <img src="./contestants/A22.png">
+            </div>
+            <div class="card" onclick="location.href='./contestants/a22.html';">
+                <img src="./contestants/A22.png">
+            </div>
+            <div class="card" onclick="location.href='./contestants/a23.html';">
+                <img src="./contestants/A23.png">
+            </div>
+            <div class="card" onclick="location.href='./contestants/a24.html';">
+                <img src="./contestants/A24.png">
+            </div>
+            <div class="card" onclick="location.href='./contestants/a25.html';">
+                <img src="./contestants/A25.png">
+            </div>
+            
         </div>
     </body>
 </html>
