--- a/contestants/a1.html
+++ b/contestants/a1.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>Amelia</title>
-        <link rel="icon" href="/icon.png">
+        <link rel="icon" href="/updated-website/icon.png">
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
