--- a/index.html
+++ b/index.html
@@ -7,79 +7,79 @@
     <body>
         <div class="layout">
             <div class="card" onclick="location.href='./contestants/a1.html';">
-                <img src="./contestants/A1.png">
+                <img src="./contestant images/A1.png">
             </div>
             <div class="card" onclick="location.href='./contestants/a2.html';">
-                <img src="./contestants/A2.png">
+                <img src="./contestant images/A2.png">
             </div>
             <div class="card" onclick="location.href='./contestants/a3.html';">
-                <img src="./contestants/A3.png">
+                <img src="./contestant images/A3X.png">
+            </div>
+            <div class="card" onclick="location.href='./contestants/a3-6.html';">
+                <img src="./contestant images/A3-6.png">
             </div>
             <div class="card" onclick="location.href='./contestants/a4.html';">
-                <img src="./contestants/A4.png">
+                <img src="./contestant images/A4.png">
             </div>
             <div class="card" onclick="location.href='./contestants/a5.html';">
-                <img src="./contestants/A5.png">
+                <img src="./contestant images/A5.png">
             </div>
             <div class="card" onclick="location.href='./contestants/a6.html';">
-                <img src="./contestants/A6.png">
+                <img src="./contestant images/A6X.png">
             </div>
             <div class="card" onclick="location.href='./contestants/a7.html';">
-                <img src="./contestants/A7.png">
+                <img src="./contestant images/A7.png">
             </div>
             <div class="card" onclick="location.href='./contestants/a8.html';">
-                <img src="./contestants/A8.png">
+                <img src="./contestant images/A8.png">
             </div>
             <div class="card" onclick="location.href='./contestants/a9.html';">
-                <img src="./contestants/A9.png">
+                <img src="./contestant images/A9.png">
             </div>
             <div class="card" onclick="location.href='./contestants/a10.html';">
-                <img src="./contestants/A10.png">
+                <img src="./contestant images/A10.png">
             </div>
             <div class="card" onclick="location.href='./contestants/a11.html';">
-                <img src="./contestants/A11.png">
+                <img src="./contestant images/A11.png">
             </div>
             <div class="card" onclick="location.href='./contestants/a12.html';">
-                <img src="./contestants/A12.png">
+                <img src="./contestant images/A12.png">
             </div>
             <div class="card" onclick="location.href='./contestants/a13.html';">
-                <img src="./contestants/A13.png">
+                <img src="./contestant images/A13.png">
             </div>
             <div class="card" onclick="location.href='./contestants/a14.html';">
-                <img src="./contestants/A14.png">
+                <img src="./contestant images/A14.png">
             </div>
             <div class="card" onclick="location.href='./contestants/a15.html';">
-                <img src="./contestants/A15.png">
+                <img src="./contestant images/A15.png">
             </div>
             <div class="card" onclick="location.href='./contestants/a16.html';">
-                <img src="./contestants/A16.png">
+                <img src="./contestant images/A16.png">
             </div>
             <div class="card" onclick="location.href='./contestants/a17.html';">
-                <img src="./contestants/A17.png">
+                <img src="./contestant images/A17.png">
             </div>
             <div class="card" onclick="location.href='./contestants/a18.html';">
-                <img src="./contestants/A18.png">
-            </div>
-            <div class="card" onclick="location.href='./contestants/a19.html';">
-                <img src="./contestants/A19.png">
+                <img src="./contestant images/A18.png">
             </div>
             <div class="card" onclick="location.href='./contestants/a20.html';">
-                <img src="./contestants/A20.png">
+                <img src="./contestant images/A20.gif">
             </div>
             <div class="card" onclick="location.href='./contestants/a21.html';">
-                <img src="./contestants/A22.png">
+                <img src="./contestant images/A21.png">
             </div>
             <div class="card" onclick="location.href='./contestants/a22.html';">
-                <img src="./contestants/A22.png">
+                <img src="./contestant images/A22.png">
             </div>
             <div class="card" onclick="location.href='./contestants/a23.html';">
-                <img src="./contestants/A23.png">
+                <img src="./contestant images/A23.png">
             </div>
             <div class="card" onclick="location.href='./contestants/a24.html';">
-                <img src="./contestants/A24.png">
+                <img src="./contestant images/A24.png">
             </div>
             <div class="card" onclick="location.href='./contestants/a25.html';">
-                <img src="./contestants/A25.png">
+                <img src="./contestant images/A25.png">
             </div>
             
         </div>
