--- a/contestants/a1.html
+++ b/contestants/a1.html
@@ -1,12 +1,11 @@
 <html>
     <head>
         <title>Amelia</title>
-        <link rel="icon" href="/updated-website/icon.png">
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <div>
-            a
+        <div class="back" onclick="location.href='/index.html';">
+            Back
         </div>
     </body>
 </html>
