--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <html>
     <head>
-        <title>IrateLizard20's website</title>
-        <link rel="icon" href="icon.png">
+        <title>Alters</title>
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
+        <div class="back" onclick="location.href='https://iratelizard20.github.io/website/';">
+            Back
+        </div>
         <div class="layout">
             <div class="card" onclick="location.href='./contestants/a1.html';">
                 <img src="./contestant images/A1.png">
