--- a/contestants/A15.html
+++ b/contestants/A15.html
@@ -1,27 +1,27 @@
 <html>
     <head>
-        <title>Amelia</title>
+        <title>Connie</title>
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <div class="container">
-            <div class="button" onclick="location.href='A25.html';">
+            <div class="button" onclick="location.href='A14.html';">
                 <
             </div>
             <div class="button" onclick="location.href='/index.html';">
                 Back
             </div>
-            <div class="button" onclick="location.href='A2.html';">
+            <div class="button" onclick="location.href='A16.html';">
                 >
             </div>
         </div>
         <div class="body">
-            <img src="/updated-website/contestant images/A1.png">
+            <img src="/updated-website/contestant images/A15.png">
             <div class="text"><a>
-                Name: Amelia/River<br><br>
-                Pronouns: it/its, they/them<br><br>
-                Source: N/A<br><br><br>
-                <span>ID: C1B1A01</span>
+                Name: Connie<br><br>
+                Pronouns: they/them, it/its<br><br>
+                Source: Computer <i>Hello World! OSC</i><br><br><br>
+                <span>ID: C1B6A15</span>
             </a></div>
         </div>
     </body>
