--- a/contestants/A12.html
+++ b/contestants/A12.html
@@ -1,27 +1,27 @@
 <html>
     <head>
-        <title>Amelia</title>
+        <title>A12</title>
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <div class="container">
-            <div class="button" onclick="location.href='A25.html';">
+            <div class="button" onclick="location.href='A11.html';">
                 <
             </div>
             <div class="button" onclick="location.href='/index.html';">
                 Back
             </div>
-            <div class="button" onclick="location.href='A2.html';">
+            <div class="button" onclick="location.href='A13.html';">
                 >
             </div>
         </div>
         <div class="body">
-            <img src="/updated-website/contestant images/A1.png">
+            <img src="/updated-website/contestant images/A12.png">
             <div class="text"><a>
-                Name: Amelia/River<br><br>
-                Pronouns: it/its, they/them<br><br>
-                Source: N/A<br><br><br>
-                <span>ID: C1B1A01</span>
+                Name: A12<br><br>
+                Pronouns: <u>none,</u> it/its<br><br>
+                Source: N/A <i>Brainmade</i><br><br><br>
+                <span>ID: C1B5A12</span>
             </a></div>
         </div>
     </body>
