--- a/contestants/A17.html
+++ b/contestants/A17.html
@@ -1,27 +1,27 @@
 <html>
     <head>
-        <title>Amelia</title>
+        <title>Liam</title>
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <div class="container">
-            <div class="button" onclick="location.href='A25.html';">
+            <div class="button" onclick="location.href='A16.html';">
                 <
             </div>
             <div class="button" onclick="location.href='/index.html';">
                 Back
             </div>
-            <div class="button" onclick="location.href='A2.html';">
+            <div class="button" onclick="location.href='A18.html';">
                 >
             </div>
         </div>
         <div class="body">
-            <img src="/updated-website/contestant images/A1.png">
+            <img src="/updated-website/contestant images/A17.png">
             <div class="text"><a>
-                Name: Amelia/River<br><br>
-                Pronouns: it/its, they/them<br><br>
-                Source: N/A<br><br><br>
-                <span>ID: C1B1A01</span>
+                Name: Liam<br><br>
+                Pronouns: he/him<br><br>
+                Source: Liam <i>Hfj ONE</i><br><br><br>
+                <span>ID: C1B6A17</span>
             </a></div>
         </div>
     </body>
