--- a/contestants/A8.html
+++ b/contestants/A8.html
@@ -1,27 +1,27 @@
 <html>
     <head>
-        <title>Amelia</title>
+        <title>Ven</title>
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <div class="container">
-            <div class="button" onclick="location.href='A25.html';">
+            <div class="button" onclick="location.href='A5.html';">
                 <
             </div>
             <div class="button" onclick="location.href='/index.html';">
                 Back
             </div>
-            <div class="button" onclick="location.href='A2.html';">
+            <div class="button" onclick="location.href='A9.html';">
                 >
             </div>
         </div>
         <div class="body">
-            <img src="/updated-website/contestant images/A1.png">
+            <img src="/updated-website/contestant images/A8.png">
             <div class="text"><a>
-                Name: Amelia/River<br><br>
-                Pronouns: it/its, they/them<br><br>
-                Source: N/A<br><br><br>
-                <span>ID: C1B1A01</span>
+                Name: Ven<br><br>
+                Pronouns: he/him<br><br>
+                Source: Ven <i>Thinking Skills</i><br><br><br>
+                <span>ID: C1B3A08</span>
             </a></div>
         </div>
     </body>
