--- a/contestants/A2.html
+++ b/contestants/A2.html
@@ -8,7 +8,7 @@
             <div class="button" onclick="location.href='A1.html';">
                 <
             </div>
-            <div class="button" onclick="location.href='/index.html';">
+            <div class="button" onclick="location.href='/updated-website/index.html';">
                 Back
             </div>
             <div class="button" onclick="location.href='A3-6.html';">
