--- a/contestants/A11.html
+++ b/contestants/A11.html
@@ -8,7 +8,7 @@
             <div class="button" onclick="location.href='A10.html';">
                 <
             </div>
-            <div class="button" onclick="location.href='/index.html';">
+            <div class="button" onclick="location.href='/updated-website/index.html';">
                 Back
             </div>
             <div class="button" onclick="location.href='A12.html';">
