--- a/contestants/A23.html
+++ b/contestants/A23.html
@@ -8,7 +8,7 @@
             <div class="button" onclick="location.href='A22.html';">
                 <
             </div>
-            <div class="button" onclick="location.href='/index.html';">
+            <div class="button" onclick="location.href='/updated-website/index.html';">
                 Back
             </div>
             <div class="button" onclick="location.href='A24.html';">
