--- a/index.html
+++ b/index.html
@@ -8,79 +8,79 @@
             Back
         </div>
         <div class="layout">
-            <div class="card" onclick="location.href='./contestants/a1.html';">
+            <div class="card" onclick="location.href='./contestants/A1.html';">
                 <img src="./contestant images/A1.png">
             </div>
-            <div class="card" onclick="location.href='./contestants/a2.html';">
+            <div class="card" onclick="location.href='./contestants/A2.html';">
                 <img src="./contestant images/A2.png">
             </div>
-            <div class="card" onclick="location.href='./contestants/a3.html';">
+            <div class="card" onclick="location.href='./contestants/A3.html';">
                 <img src="./contestant images/A3X.png">
             </div>
-            <div class="card" onclick="location.href='./contestants/a3-6.html';">
+            <div class="card" onclick="location.href='./contestants/A3-6.html';">
                 <img src="./contestant images/A3-6.png">
             </div>
-            <div class="card" onclick="location.href='./contestants/a4.html';">
+            <div class="card" onclick="location.href='./contestants/A4.html';">
                 <img src="./contestant images/A4.png">
             </div>
-            <div class="card" onclick="location.href='./contestants/a5.html';">
+            <div class="card" onclick="location.href='./contestants/A5.html';">
                 <img src="./contestant images/A5.png">
             </div>
-            <div class="card" onclick="location.href='./contestants/a6.html';">
+            <div class="card" onclick="location.href='./contestants/A6.html';">
                 <img src="./contestant images/A6X.png">
             </div>
-            <div class="card" onclick="location.href='./contestants/a7.html';">
+            <div class="card" onclick="location.href='./contestants/A7.html';">
                 <img src="./contestant images/A7.png">
             </div>
-            <div class="card" onclick="location.href='./contestants/a8.html';">
+            <div class="card" onclick="location.href='./contestants/A8.html';">
                 <img src="./contestant images/A8.png">
             </div>
-            <div class="card" onclick="location.href='./contestants/a9.html';">
+            <div class="card" onclick="location.href='./contestants/A9.html';">
                 <img src="./contestant images/A9.png">
             </div>
-            <div class="card" onclick="location.href='./contestants/a10.html';">
+            <div class="card" onclick="location.href='./contestants/A10.html';">
                 <img src="./contestant images/A10.png">
             </div>
-            <div class="card" onclick="location.href='./contestants/a11.html';">
+            <div class="card" onclick="location.href='./contestants/A11.html';">
                 <img src="./contestant images/A11.png">
             </div>
-            <div class="card" onclick="location.href='./contestants/a12.html';">
+            <div class="card" onclick="location.href='./contestants/A12.html';">
                 <img src="./contestant images/A12.png">
             </div>
-            <div class="card" onclick="location.href='./contestants/a13.html';">
+            <div class="card" onclick="location.href='./contestants/A13.html';">
                 <img src="./contestant images/A13.png">
             </div>
-            <div class="card" onclick="location.href='./contestants/a14.html';">
+            <div class="card" onclick="location.href='./contestants/A14.html';">
                 <img src="./contestant images/A14.png">
             </div>
-            <div class="card" onclick="location.href='./contestants/a15.html';">
+            <div class="card" onclick="location.href='./contestants/A15.html';">
                 <img src="./contestant images/A15.png">
             </div>
-            <div class="card" onclick="location.href='./contestants/a16.html';">
+            <div class="card" onclick="location.href='./contestants/A16.html';">
                 <img src="./contestant images/A16.png">
             </div>
-            <div class="card" onclick="location.href='./contestants/a17.html';">
+            <div class="card" onclick="location.href='./contestants/A17.html';">
                 <img src="./contestant images/A17.png">
             </div>
-            <div class="card" onclick="location.href='./contestants/a18.html';">
+            <div class="card" onclick="location.href='./contestants/A18.html';">
                 <img src="./contestant images/A18.png">
             </div>
-            <div class="card" onclick="location.href='./contestants/a20.html';">
+            <div class="card" onclick="location.href='./contestants/A20.html';">
                 <img src="./contestant images/A20.gif">
             </div>
-            <div class="card" onclick="location.href='./contestants/a21.html';">
+            <div class="card" onclick="location.href='./contestants/A21.html';">
                 <img src="./contestant images/A21.png">
             </div>
-            <div class="card" onclick="location.href='./contestants/a22.html';">
+            <div class="card" onclick="location.href='./contestants/A22.html';">
                 <img src="./contestant images/A22.png">
             </div>
-            <div class="card" onclick="location.href='./contestants/a23.html';">
+            <div class="card" onclick="location.href='./contestants/A23.html';">
                 <img src="./contestant images/A23.png">
             </div>
-            <div class="card" onclick="location.href='./contestants/a24.html';">
+            <div class="card" onclick="location.href='./contestants/A24.html';">
                 <img src="./contestant images/A24.png">
             </div>
-            <div class="card" onclick="location.href='./contestants/a25.html';">
+            <div class="card" onclick="location.href='./contestants/A25.html';">
                 <img src="./contestant images/A25.png">
             </div>
             
