--- a/contestants/A8.html
+++ b/contestants/A8.html
@@ -8,7 +8,7 @@
             <div class="button" onclick="location.href='A5.html';">
                 <
             </div>
-            <div class="button" onclick="location.href='/updated-website/index.html';">
+            <div class="button" onclick="location.href='/updated-website/';">
                 Back
             </div>
             <div class="button" onclick="location.href='A9.html';">
