--- a/contestants/A15.html
+++ b/contestants/A15.html
@@ -8,7 +8,7 @@
             <div class="button" onclick="location.href='A14.html';">
                 <
             </div>
-            <div class="button" onclick="location.href='/updated-website/index.html';">
+            <div class="button" onclick="location.href='/updated-website/';">
                 Back
             </div>
             <div class="button" onclick="location.href='A16.html';">
