--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <img src="./contestant images/A6X.png">
             </div>
             <div class="card" onclick="location.href='./contestants/A7.html';">
-                <img src="./contestant images/A7.png">
+                <img src="./contestant images/A7X.png">
             </div>
             <div class="card" onclick="location.href='./contestants/A8.html';">
                 <img src="./contestant images/A8.png">
