--- a/contestants/F1.html
+++ b/contestants/F1.html
@@ -2,6 +2,7 @@
     <head>
         <title>Iliad</title>
         <link rel="stylesheet" href="styles.css">
+        <link rel="icon" href="/updated-website/icon.png">
     </head>
     <body>
         <div class="container">
