--- a/contestants/P22.html
+++ b/contestants/P22.html
@@ -2,6 +2,7 @@
     <head>
         <title>Ida</title>
         <link rel="stylesheet" href="styles.css">
+        <link rel="icon" href="/updated-website/icon.png">
     </head>
     <body>
         <div class="container">
@@ -11,7 +12,7 @@
             <div class="button" onclick="location.href='/updated-website/';">
                 Back
             </div>
-            <div class="button" onclick="location.href='P1.html';">
+            <div class="button" onclick="location.href='P23.html';">
                 >
             </div>
         </div>
