--- a/contestants/P1.html
+++ b/contestants/P1.html
@@ -2,10 +2,11 @@
     <head>
         <title>Amelia</title>
         <link rel="stylesheet" href="styles.css">
+        <link rel="icon" href="/updated-website/icon.png">
     </head>
     <body>
         <div class="container">
-            <div class="button" onclick="location.href='P22.html';">
+            <div class="button" onclick="location.href='P23.html';">
                 <
             </div>
             <div class="button" onclick="location.href='/updated-website/';">
