--- a/contestants/P8.html
+++ b/contestants/P8.html
@@ -2,6 +2,7 @@
     <head>
         <title>Fern</title>
         <link rel="stylesheet" href="styles.css">
+        <link rel="icon" href="/updated-website/icon.png">
     </head>
     <body>
         <div class="container">
