--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <head>
         <title>Alters</title>
         <link rel="stylesheet" href="styles.css">
+        <link rel="icon" href="icon.png">
     </head>
     <body>
         <div class="back" onclick="location.href='/website';">
@@ -73,6 +74,9 @@
             </div>
             <div class="card" onclick="location.href='./contestants/P22.html';">
                 <img src="./contestant images/A24.png">
+            </div>
+            <div class="card" onclick="location.href='./contestants/P23.html';">
+                <img src="./contestant images/A25.png">
             </div>
 
         </div>
